finish up nav options

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <li>LAYOUT</li>
             <li role="menuitem"><a href="#grid-system">Grid system</a></li>
             <li role="menuitem">x <a href="#navigation">Navigation</a></li>
-            <li role="menuitem">x <a href="#pre-header">Pre-header</a></li>
             <li role="menuitem">x <a href="#footer">Footer</a></li>
             <li class="divider"></li>
 
@@ -426,12 +425,57 @@
 </code></pre>
               </div>
               <h6>Sub nav</h6>
+              <p>Used in conjunction with the navbar to provide in-page navigation or options. Read more about the sub nav in <a href="http://foundation.zurb.com/docs/components/subnav.html">Foundation's docs</a>.</p>
+              <div class="panel">
+                <h6 class="label">Sub nav</h6>
+                <dl id="change-view" class="sub-nav">
+                  <dt>Preview viewport size:</dt>
+                  <dd class="small-view">Small</dd>
+                  <dd class="medium-view">Medium</dd>
+                  <dd class="large-view">Large</dd>
+                  <dd class="auto-view">Auto</dd>
+                </dl>
+<h6 class="label">HTML</h6>
+<pre><code class="html">
+  &lt;dl id="change-view" class="sub-nav"&gt;
+    &lt;dt&gt;Preview viewport size:&lt;/dt&gt;
+    &lt;dd class="small-view"&gt;Small&lt;/dd&gt;
+    &lt;dd class="medium-view"&gt;Medium&lt;/dd&gt;
+    &lt;dd class="large-view"&gt;Large&lt;/dd&gt;
+    &lt;dd class="auto-view"&gt;Auto&lt;/dd&gt;
+  &lt;/dl&gt;
+</code></pre>
+              </div>
+
               <h6>Side nav</h6>
+              <p>The side nav panel will take up 100% of the width of its parent.</p>
+              <div class="panel">
+                <h6 class="label">Side nav</h6>
+                <ul class="side-nav">
+                  <li>TYPOGRAPHY</li>
+                  <li class="divider"></li>
+                  <li role="menuitem"><a href="#headlines">Headlines</a></li>
+                  <li role="menuitem"><a href="#paragraph-styles">Paragraphs</a></li>
+                  <li role="menuitem"><a href="#lists">Lists</a></li>
+                  <li role="menuitem"><a href="#icons">Icons</a></li>
+                </ul>
+                <h6 class="label">Side nav</h6>
+<h6 class="label">HTML</h6>
+<pre><code class="html">
+  &lt;ul class="side-nav">
+    &lt;li>TYPOGRAPHY&lt;/li>
+    &lt;li class="divider">&lt;/li>
+    &lt;li role="menuitem">&lt;a href="#headlines">Headlines&lt;/a>&lt;/li>
+    &lt;li role="menuitem">&lt;a href="#paragraph-styles">Paragraphs&lt;/a>&lt;/li>
+    &lt;li role="menuitem">&lt;a href="#lists">Lists&lt;/a>&lt;/li>
+    &lt;li role="menuitem">&lt;a href="#icons">Icons&lt;/a>&lt;/li>
+  &lt;/ul>
+</code></pre>
+              </div>
               <h6>Off-canvas nav</h6>
+              <p>Primarily used for mobile devices, <a href="http://foundation.zurb.com/docs/components/offcanvas.html">Foundation's off-canvas nav</a> provides a slide-out side panel for navigation. It has yet to be styled for Blueline. Guidelines for usage can be found on the "Usage" page.</p>
               <h6>Icon bar</h6>
-            </section>
-            <section>
-              <h4 id="pre-header">Pre-header</h4>
+              <p>Primarily used for mobile devices, <a href="http://foundation.zurb.com/docs/components/icon-bar.html">Foundation's icon bar</a> provides an icon-driven menu with a mobile-native feel. It has yet to be styled for Blueline.  Guidelines for usage can be found on the "Usage" page.</p>
             </section>
             <section>
               <h4 id="footer">Footer</h4>
