media queries for footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li>LAYOUT</li>
             <li role="menuitem"><a href="#grid-system">Grid system</a></li>
             <li role="menuitem"><a href="#navigation">Navigation</a></li>
-            <li role="menuitem">x <a href="#footer">Footer</a></li>
+            <li role="menuitem"><a href="#footer-example">Footer</a></li>
             <li class="divider"></li>
 
             <li>MODULES</li>
@@ -472,7 +472,7 @@
 </code></pre>
               </div>
               <h6>Off-canvas nav</h6>
-              <p>Primarily used for mobile devices, <a href="http://foundation.zurb.com/docs/components/offcanvas.html">Foundation's off-canvas nav</a> provides a slide-out side panel for navigation. It has yet to be styled for Blueline. Guidelines for usage can be found on the "Usage" page.</p>
+              <p>Primarily used for mobile devices, <a href="http://foundation.zurb.com/docs/components/offcanvas.html">Foundation's off-canvas nav</a> provides a slide-out side panel for navigation. It has yet to be styled for Blueline. Guidelines for usage can be found on the "Usage" page. Requires inclusion of <code>off-canvas.js</code> on your page.</p>
               <h6>Icon bar</h6>
               <p>Primarily used for mobile devices, <a href="http://foundation.zurb.com/docs/components/icon-bar.html">Foundation's icon bar</a> provides an icon-driven menu with a mobile-native feel. It has yet to be styled for Blueline.  Guidelines for usage can be found on the "Usage" page.</p>
             </section>
