add corner on product logo

--- a/index.html
+++ b/index.html
@@ -941,6 +941,19 @@
             </section>
             <section>
               <h4 id="logo-mark">Product logo mark</h4>
+              <p>The product logo mark is used on Knight Lab software, such as <a href="http://timeline.knightlab.com">TimelineJS</a>. It is usually used in conjunction with the <code>h2.intro</code> and can be rendered in three size. The default size (and smallest it should be) is <code>60px</code>. Adding a class of <code>.xl</code> to <code>.logo-mark</code> increases the size to <code>90px</code>, and adding a class of <code>.xxl</code> increases it to <code>120px</code>.</p>
+              <div class="panel">
+                <h6 class="label">Logo mark</h6>
+                <h1 class="logo-mark">Timeline <span><em>JS</em></span></h1>
+                <h1 class="logo-mark xl">Timeline <span><em>JS</em></span></h1>
+                <h1 class="logo-mark xxl">Timeline <span><em>JS</em></span></h1>
+                <h6 class="label">HTML</h6>
+                <pre><code class="html">
+  &lt;h1 class="logo-mark"&gt;Timeline &lt;span&gt;&lt;em&gt;JS&lt;/em&gt;&lt;/span&gt;&lt;/h1&gt;
+  &lt;h1 class="logo-mark xl"&gt;Timeline &lt;span&gt;&lt;em&gt;JS&lt;/em&gt;&lt;/span&gt;&lt;/h1&gt;
+  &lt;h1 class="logo-mark xxl"&gt;Timeline &lt;span&gt;&lt;em&gt;JS&lt;/em&gt;&lt;/span&gt;&lt;/h1&gt;
+                </code></pre>
+              </div>
             </section>
           </div>
         </div>
