updates to index

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blueline Style Guide -- Northwestern University Knight Lab</title>
+    <title>PurpleLine Style Guide -- Northwestern University Knight Lab</title>
     <!-- fonts -->
     <link href="http://cloud.webtype.com/css/d4767ecb-457a-4677-8761-72f890add836.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="stylesheets/blueline.css" />
-    <link rel="stylesheet" href="stylesheets/navigation.css" />
-    <link rel="stylesheet" href="stylesheets/inputs.css" />
-    <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.css" />
-    <link rel="stylesheet" href="stylesheets/styleguide.css" />
+    <link rel="stylesheet" href="source/css/purpleline.css" />
+    <link rel="stylesheet" href="source/css/navigation.css" />
+    <link rel="stylesheet" href="source/css/inputs.css" />
+    <link rel="stylesheet" href="source/css/font-awesome/font-awesome.css" />
+    <link rel="stylesheet" href="source/css/styleguide.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
@@ -18,7 +18,7 @@
     <nav class="top-bar sticky" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#">Blueline</a></h1>
+          <h1><a href="#">PurpleLine</a></h1>
         </li>
          <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
