--- a/index.html
+++ b/index.html
@@ -16,35 +16,39 @@
   <body>
   <div data-magellan-expedition="fixed">
     <nav class="top-bar sticky" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name">
-          <h1><a href="#">PurpleLine</a></h1>
-        </li>
-         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-      </ul>
-
-      <section class="top-bar-section">
-        <!-- Right Nav Section -->
-        <ul class="right">
-          <li><a href="http://knightlab.northwestern.edu/">Northwestern University Knight Lab</a></li>
+      <div class="row">
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">PurpleLine</a></h1>
+          </li>
+           <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
 
-        <!-- Left Nav Section -->
-        <ul class="left">
-          <li><a href="/index.html">Components</a></li>
-          <li><a href="/templates.html">Project templates</a></li>
-          <li><a href="/usage.html">Style guide</a></li>
-          <li class="active"><a href="http://foundation.zurb.com/docs/">Foundation docs</a></li>
-        </ul>
-      </section>
+        <section class="top-bar-section">
+          <!-- Right Nav Section -->
+          <ul class="right">
+            <li class="logo"><a href="//knightlab.northwestern.edu/" alt="Northwestern University Knight Lab"><img width="130" src="http://cdn.knightlab.com/libs/purpleline/latest/img/logos/logo_horizontal_NOtagline_383x91_transparent_NOpadding.png"></a></li>
+          </ul>
+
+          <!-- Left Nav Section -->
+          <ul class="left">
+            <li><a href="/index.html">Components</a></li>
+            <li><a href="/templates.html">Project templates</a></li>
+            <li><a href="/usage.html">Style guide</a></li>
+            <li class="active"><a href="http://foundation.zurb.com/docs/">Foundation docs</a></li>
+          </ul>
+        </section>
+      </div>
     </nav>
     <dl id="change-view" class="sub-nav">
-      <dt>Preview viewport size:</dt>
-      <dd class="small-view">Small</dd>
-      <dd class="medium-view">Medium</dd>
-      <dd class="large-view">Large</dd>
-      <dd class="auto-view">Auto</dd>
+      <div class="row">
+        <dt>Preview viewport size:</dt>
+        <dd class="small-view">Small</dd>
+        <dd class="medium-view">Medium</dd>
+        <dd class="large-view">Large</dd>
+        <dd class="auto-view">Auto</dd>
+      </div>
     </dl>
     </div>
 
