--- a/index.html
+++ b/index.html
@@ -451,6 +451,48 @@
 </code></pre>
               </div>
 
+              <h6>Tabs</h6>
+              <p>Assumes that the background of the page they are placed on will be white.</p>
+              <div class="panel">
+                <h6 class="label">Tabs</h6>
+                <ul class="tabs">
+                  <li class="tab-title active">
+                    <a href="#new">Active tab</a>
+                  </li>
+                  <li class="tab-title">
+                      <a href="#old">Inactive tab</a>
+                  </li>
+                </ul>
+                <div class="tabs-content">
+                  <div class="content active" id="new">
+                    <p>This is the first panel of the basic tab example. You can place all sorts of content here including a grid.</p>
+                  </div>
+                  <div class="content" id="old">
+                    <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+                  </div>
+                </div>
+<h6 class="label">HTML</h6>
+<pre><code class="html">
+  &lt;ul class="tabs"&gt;
+    &lt;li class="tab-title active"&gt;
+      &lt;a href="#"&gt;Active tab&lt;/a&gt;
+    &lt;/li&gt;
+    &lt;li class="tab-title"&gt;
+        &lt;a href="#"&gt;Inactive tab&lt;/a&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+  &lt;div class="tabs-content"&gt;
+    &lt;div class="content active" id="new"&gt;
+      &lt;p&gt;This is the first panel of the basic tab example. You can place all sorts of content here including a grid.&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;div class="content" id="old"&gt;
+      &lt;p&gt;This is the second panel of the basic tab example. This is the second panel of the basic tab example.&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+
+</pre></code>
+</div>
+
               <h6>Side nav</h6>
               <p>The side nav panel will take up 100% of the width of its parent.</p>
               <div class="panel">
@@ -1002,11 +1044,11 @@
       </div><!-- end .about-knightlab -->
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
-    <script src="bower_components/foundation/js/foundation/foundation.offcanvas.js"></script>
-    <script src="bower_components/foundation/js/foundation/foundation.dropdown.js"></script>
-    <script src="js/app.js"></script>
+    <script src="//cdn.knightlab.com/libs/purpleline/latest/js/purpleline.min.js"></script>
+    <script src="//cdn.knightlab.com/libs/purpleline/latest/js/foundation.magellan.js"></script>
+    <script src="//cdn.knightlab.com/libs/purpleline/latest/js/foundation.offcanvas.js"></script>
+    <script src="//cdn.knightlab.com/libs/purpleline/latest/js/foundation.dropdown.js"></script>
+    <script src="source/js/app.js"></script>
     <!-- code syntax highlighting -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
     <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
