include protocol for soundcite link

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <section class="clearfix"><hr />
               <h2>Typography</h2>
               <h4 id="headlines">Headlines</h4>
-              <p>See the <a href="soundcite.knightlab.com">Soundcite project page <i class="fa fa-external-link"></i></a> for an example of how to use each heading.</p>
+              <p>See the <a href="http://soundcite.knightlab.com">Soundcite project page <i class="fa fa-external-link"></i></a> for an example of how to use each heading.</p>
               <p>Use <code>h2.intro</code> in conjunction with the <a href="#logo-mark">logo mark</a> for project taglines.</p>
               <div class="panel">
                 <h6 class="label">Headline styles</h6>
@@ -666,10 +666,10 @@
                           <span style="display:none;" itemprop="name" title="Knight Lab | Advancing news media innovation through exploration and experimentation." class="address-name">Knight Lab</span>
                           <span itemprop="tel" class="tel">(847) 467-4971 | </span>
                           <span itemprop="address" itemscope="" itemtype="http://data-vocabulary.org/Address" class="address">
-                            <span itemprop="street-address" class="street-address"><a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank">1845 Sheridan Road Fisk #109 & #111</span>, 
-                            <span itemprop="locality">Evanston,</span> 
-                            <span itemprop="region">IL</span> 
-                            <span itemprop="postal-code">60208 |</span> 
+                            <span itemprop="street-address" class="street-address"><a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank">1845 Sheridan Road Fisk #109 & #111</span>,
+                            <span itemprop="locality">Evanston,</span>
+                            <span itemprop="region">IL</span>
+                            <span itemprop="postal-code">60208 |</span>
                             <span itemprop="country-name" class="address-country">United States</span>
                           </span>
                           <span style="display:none;" itemprop="geo" itemscope="" itemtype="http://www.data-vocabulary.org/Geo/" class="geo">
@@ -704,10 +704,10 @@
           &lt;span style="display:none;" itemprop="name" title="Knight Lab | Advancing news media innovation through exploration and experimentation." class="address-name"&gt;Knight Lab&lt;/span&gt;
           &lt;span itemprop="tel" class="tel"&gt;(847) 467-4971 | &lt;/span&gt;
           &lt;span itemprop="address" itemscope="" itemtype="http://data-vocabulary.org/Address" class="address"&gt;
-            &lt;span itemprop="street-address" class="street-address"&gt;&lt;a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank"&gt;1845 Sheridan Road Fisk #109 & #111&lt;/span&gt;, 
-            &lt;span itemprop="locality"&gt;Evanston,&lt;/span&gt; 
-            &lt;span itemprop="region"&gt;IL&lt;/span&gt; 
-            &lt;span itemprop="postal-code"&gt;60208 |&lt;/span&gt; 
+            &lt;span itemprop="street-address" class="street-address"&gt;&lt;a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank"&gt;1845 Sheridan Road Fisk #109 & #111&lt;/span&gt;,
+            &lt;span itemprop="locality"&gt;Evanston,&lt;/span&gt;
+            &lt;span itemprop="region"&gt;IL&lt;/span&gt;
+            &lt;span itemprop="postal-code"&gt;60208 |&lt;/span&gt;
             &lt;span itemprop="country-name" class="address-country"&gt;United States&lt;/span&gt;
           &lt;/span&gt;
           &lt;span style="display:none;" itemprop="geo" itemscope="" itemtype="http://www.data-vocabulary.org/Geo/" class="geo"&gt;
@@ -1444,10 +1444,10 @@
             <span style="display:none;" itemprop="name" title="Knight Lab | Advancing news media innovation through exploration and experimentation." class="address-name">Knight Lab</span>
             <span itemprop="tel" class="tel">(847) 467-4971 | </span>
             <span itemprop="address" itemscope="" itemtype="http://data-vocabulary.org/Address" class="address">
-              <span itemprop="street-address" class="street-address"><a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank">1845 Sheridan Road Fisk #109 & #111</span>, 
-              <span itemprop="locality">Evanston,</span> 
-              <span itemprop="region">IL</span> 
-              <span itemprop="postal-code">60208 |</span> 
+              <span itemprop="street-address" class="street-address"><a href="//maps.google.com/maps?q=1845+Sheridan+Road+Evanston+IL+6020&amp;hl=en&amp;ll=42.050942,-87.673511&amp;spn=0.003059,0.004898&amp;sll=42.050647,-87.674246&amp;sspn=0.012237,0.019591&amp;gl=us&amp;hnear=1845+Sheridan+Rd,+Evanston,+Cook,+Illinois+60201&amp;t=m&amp;z=18&amp;iwloc=A" target="_blank">1845 Sheridan Road Fisk #109 & #111</span>,
+              <span itemprop="locality">Evanston,</span>
+              <span itemprop="region">IL</span>
+              <span itemprop="postal-code">60208 |</span>
               <span itemprop="country-name" class="address-country">United States</span>
             </span>
             <span style="display:none;" itemprop="geo" itemscope="" itemtype="http://www.data-vocabulary.org/Geo/" class="geo">
